--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -27,3 +27,27 @@
   font-weight: 600;
   font-size: large;
 }
+
+/* new navigation css */
+
+.bg-img {
+  /* The image used */
+  background-image: url("../../assets/home-bg.jpg");
+
+  /* min-height: 380px; */
+  height: 100vh;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  /* Needed to position the navbar */
+  position: relative;
+}
+
+/* The navbar */
+.topnav {
+  overflow: hidden;
+  /* background-color: #333; */
+}
