--- a/src/components/BookNowBtn/style.css
+++ b/src/components/BookNowBtn/style.css
@@ -1,7 +1,9 @@
 .custom-button {
-    background-color: #03755B;
+    /* background-color: #03755B; */
+    background-color: #594545 ;
     color: white;
-    border-color: #03755B;
+    /* border-color: #03755B; */
+    border-color: #594545 ;
     border-radius: 50px;
     font-size: 16px;
     box-shadow: 0px 5px 10px #888888;
@@ -13,6 +15,8 @@
     box-shadow: 0px 8px 20px #888888;
     background-color: #BD7E49;
     border-color: #BD7E49;
+    /* background-color: #F1DEC9 ;
+    border-color: #F1DEC9 ; */
 }
 
 .custom-button:active {
