--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -32,8 +32,9 @@
 
 .bg-img {
   /* The image used */
-  background-image: url("../../assets/home-bg.jpg");
-
+  /* background-image: url("../../assets/home-bg.jpg"); */
+  background-image: url("../../assets/home-bg-1.png");
+  
   /* min-height: 380px; */
   height: 100vh;
 
