--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -25,6 +25,10 @@
   padding-top: 80px;
 }
 
+.sixthRefDiv2 {
+  padding-top: 20px;
+}
+
 .makeAppointA {
   color: #F1DEC9;
   background-color: #594545;
@@ -34,6 +38,7 @@
   text-decoration: none;
   text-align: center;
   border-radius: 5px;
+  border: 1px solid transparent;
 }
 
 .makeAppointA:hover {
@@ -42,11 +47,29 @@
   box-shadow: 0px 8px 20px #F1DEC9;
   background-color: #F1DEC9;
   color: #594545;
+  border-color: #594545;
   font-weight: 600;
   transition: transform 2.05s ease-in-out;
   -webkit-transition: transform 1.05s ease-in-out;
   -moz-transition:transform 1.05s ease-in-out;
   -ms-transition:transform 1.05s ease-in-out;
+}
+
+.makeAppointA2:hover {
+  border-color: 2px solid #594545;
+}
+
+.sixthRefFirstDiv {
+  background-image: url("../../assets/home-bg-image.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sixthRefH1 {
+  color: #594545;
+  font-size: 50px;
+  padding-top: 100px;
 }
 
 /* new navigation css */
@@ -77,6 +100,11 @@
   /* background-color: #333; */
 }
 
+.paymentIconImg {
+  height: 100px;
+  width: 400px;
+}
+
 @media (max-width: 991px) {
   .HomeTopDiv-image {
     height: 200px;
@@ -104,5 +132,10 @@
   .makeAppointA {
     width: 50vw;
    }
+
+   .sixthRefH1 {
+    font-size: 30px;
+    padding-top: 150px;
+  }
 }
  
