--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -47,11 +47,7 @@
 }
 
 .makeAppointDiv {
-  /* padding-top: 80px; */
-}
-
-.sixthRefDiv2 {
-  /* padding-top: 20px; */
+  padding-top: 80px;
 }
 
 .makeAppointA {
