--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -18,9 +18,7 @@
 
 .homeTopMainDiv {
   height: 80vh;
-  /* border: 1px solid #F1DEC9; */
   margin-bottom: 73px;
-  /* filter: blur(1px); */
   background-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -93,10 +91,9 @@
   padding-top: 160px;
 }
 
-.fourthRefH1 {
+.home-h1 {
   color: #594545;
   font-size: 50px;
-  padding-top: 20px;
 }
 
 .promotionBtn {
@@ -113,15 +110,12 @@
 
 .promoMainDiv {
   background-color: #F1DEC9;
-  /* height: 450px; */
   display: flex;
   justify-content: space-around;
   align-items: stretch;
   flex-direction: column;
-  padding-top: 30px;
+  padding-top: 50px;
   padding-bottom: 50px;
-  border-top: 1px solid #594545;
-  border-bottom: 1px solid #594545;
 }
 
 .paymentIconImg {
@@ -141,15 +135,12 @@
 
 .homeServicesMainDiv {
   background-color: #F1DEC9;
-  /* height: 550px; */
   display: flex;
   justify-content: space-around;
   align-items: stretch;
   flex-direction: column;
   padding-top: 100px;
   padding-bottom: 100px;
-  /* border-top: 1px solid #594545; */
-  /* border-bottom: 1px solid #594545; */
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -172,8 +163,6 @@
   justify-content: space-around;
   align-items: stretch;
   flex-direction: column;
-  /* border-top: 1px solid #594545; */
-  /* border-bottom: 1px solid #594545; */
   padding-bottom: 100px;
 }
 
@@ -217,10 +206,6 @@
     vertical-align:middle;
   }
 
-  /* .promoMainDiv {
-    height: 700px;
-  } */
-
   .topPadding {
     padding-top: 20px;
   }
@@ -238,8 +223,8 @@
     padding-top: 20px;
   }
 
-  .fifthRefH1 {
-    font-size: 35px;
+  .home-h1 {
+    font-size: 30px;
   }
 }
  
