--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -79,7 +79,8 @@
 }
 
 .sixthRefFirstDiv {
-  background-image: url("../../assets/home-bg-image.png");
+  /* background-image: url("../../assets/home-bg-image.png"); */
+  background-image: url("../../assets/home/make-an-appointment.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
