--- a/src/components/BookNowBtn/style.css
+++ b/src/components/BookNowBtn/style.css
@@ -1,8 +1,6 @@
-.custom-button {
-    /* background-color: #03755B; */
+.book-now-button {
     background-color: #594545 ;
-    color: white;
-    /* border-color: #03755B; */
+    color: #F1DEC9;
     border-color: #594545 ;
     border-radius: 50px;
     font-size: 16px;
@@ -10,16 +8,25 @@
     transition: all 0.3s ease-in-out;
 }
 
-.custom-button:hover {
+.book-now-button:hover {
     transform: translateY(-3px);
-    box-shadow: 0px 8px 20px #888888;
-    background-color: #BD7E49;
-    border-color: #BD7E49;
-    /* background-color: #F1DEC9 ;
-    border-color: #F1DEC9 ; */
+    box-shadow: 0px 8px 20px #F1DEC9;
+    background-color: #F1DEC9;
+    border-color: #594545;
+    color: #594545;
 }
 
-.custom-button:active {
+.book-now-button:active {
     transform: translateY(-1px);
     box-shadow: 0px 2px 5px #888888;
+}
+
+.book-now-anchor {
+    text-decoration: none;
+    color: #F1DEC9;
+}
+
+.book-now-anchor:hover {
+    text-decoration: none;
+    color: #594545;
 }
