review carousel updated, approx 1hr

--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -22,15 +22,6 @@
   background-color: rgba(255, 255, 255, 0.6);
 }
 
-.feedback-div {
-  background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 5px;
-  padding: 5px;
-  -webkit-box-shadow: 0 0 10px #fff;
-  box-shadow: 0 0 10px #fff;
-  font-weight: 500;
-}
-
 .HomeTopDiv-image {
   height: 300px;
   width: 300px;
@@ -86,10 +77,10 @@
 .home-make-appointment-anchor2:hover {
   border-color: 2px solid #594545;
 }
-
+/* 
 .textColor {
   color: #594545;
-}
+} */
 
 .sixthRefFirstDiv {
   /* background-image: url("../../assets/home-bg-image.png"); */
@@ -181,7 +172,7 @@
   color: #594545;
 }
 
-.feedbackSection {
+.home-review-section {
   background-color: #F1DEC9;
   display: flex;
   justify-content: space-around;
@@ -191,8 +182,39 @@
   padding-bottom: 100px;
 }
 
-.fixed-height {
-  max-height: 400px;
+.home-review-carousel-caption {
+  top: 50%;
+  transform: translateY(-50%);
+  bottom: initial;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  color: #594545;
+  padding: 170px;
+}
+
+.home-review-div {
+  width: fit-content;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+  padding: 5px;
+  -webkit-box-shadow: 0 0 10px #fff;
+  box-shadow: 0 0 10px #fff;
+  font-weight: 500;
+  color: #594545;
+}
+
+.home-feedback-carousel-image {
+  width: 100vw;
+  top: 0;
+  left: 0;
+  height: 32rem;
+  object-fit: contain;
+}
+
+.reviews-carousel-item {
+  /* display: flex; */
+  /* justify-content: center; */
 }
 
 .paymentLogoDiv {
@@ -287,5 +309,10 @@
   .home-service-card-image {
     height: 50vw;
     object-fit: cover;
+  }
+
+  .home-review-carousel-caption {
+    padding: 10px;
+    font-size: small;
   }
 }
