unused class commented, approx 10mins

--- a/src/components/HomeTopDiv/HomeTopDiv.css
+++ b/src/components/HomeTopDiv/HomeTopDiv.css
@@ -212,10 +212,10 @@
   object-fit: contain;
 }
 
-.reviews-carousel-item {
-  /* display: flex; */
-  /* justify-content: center; */
-}
+/* .reviews-carousel-item {
+  display: flex;
+  justify-content: center;
+} */
 
 .paymentLogoDiv {
   padding-top: 20px;
